hphp/test/quick/clsconstant_redecl1.php.expectf
HipHop Fatal error: Cannot override previously defined constant A::FOO in B in %s on line 7
